cargo-features = ["edition2024"]

[package]
name = "game-test"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
asset-importer = "0.4.0"
async-channel = "2.3.1"
atree = "0.5.2"
bitvec = "1.0.1"
bytemuck = "1.22.0"
crossbeam-channel = "0.5.14"
egui = { version = "0.32.3", features = ["bytemuck"] }
either = "1.15.0"
futures = "0.3.31"
glam = { version = "0.30.1", features = ["bytemuck"] }
image = { version = "0.25.6", features = ["png"] }
log = { version = "0.4.28", features = ["std"] }
pollster = "0.4.0"
quadtree = "0.5.0"
rand = "0.9.0"
simplelog = "0.12.2"
wgpu = "24.0.1"
winit = "0.30.12"


